--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bullmq": "^5.53.2",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "handlebars": "^4.7.8",
+    "ioredis": "^5.6.1",
+    "nodemailer": "^7.0.3",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
